vote shift tool turns transparent during blockchain calls, margin between project and token dashboard is fixed

--- a/app/assets/stylesheets/components/vote_shift_tool.scss
+++ b/app/assets/stylesheets/components/vote_shift_tool.scss
@@ -1,4 +1,5 @@
-.vote-shift-tool {
+.vote-shift-tool,
+.vote-shift-tool-loading {
   position: absolute;
   left: 30px;
   top: -80px;
@@ -23,5 +24,44 @@
       color: #fff;
       border-color: #375c5a;
     }
+  }
+
+  .vote-bar {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.vote-shift-tool {
+  .vote-bar {
+    fill: #aa7a60;
+  }
+
+  .vote-bar-applied {
+    fill: #61aba9;
+  }
+
+  .vote-bar-freedup {
+    fill: #fff;
+  }
+}
+
+.vote-shift-tool-loading {
+  .vote-bar {
+    fill: #fff;
+    stroke: #aa7a60;
+    stroke-width: 2;
+  }
+
+  .vote-bar-applied {
+    fill: #fff;
+    stroke: #9a9288;
+    stroke-width: 2;
+  }
+
+  .vote-bar-freedup {
+    fill: #fff;
+    stroke: #aa7a60;
+    stroke-width: 2;
   }
 }
